--- a/Fleet.html
+++ b/Fleet.html
@@ -110,7 +110,7 @@
 <div class="topnav" id="myTopnav">
   <a href="GreenTrack.html">Home</a>
   <a href="fleet.html" class="active">Our Fleet</a>
-  <a href="booking.html">Send With Us</a>
+  <a href="Booking.html">Send With Us</a>
  
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <img src="" style="max-width:100%; height:auto;">
