--- a/Thanks.html
+++ b/Thanks.html
@@ -79,7 +79,7 @@
 <div class="topnav" id="myTopnav">
   <a href="GreenTrack.html" class="active">Home</a>
   <a href="Fleet.html">Our Fleet</a>
-  <a href="booking.html">Send With Us</a>
+  <a href="Booking.html">Send With Us</a>
  
 </script>
 </td>
