--- a/Fleet.html
+++ b/Fleet.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #A2BCAA; 
+      background-color: #B5CCCC; 
     }  
 
     .topnav {
