--- a/GreenTrack.html
+++ b/GreenTrack.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ACAAA1; 
+      background-color: #B5CCCC; 
     }  
 
     .topnav {
