--- a/GreenTrack.html
+++ b/GreenTrack.html
@@ -145,6 +145,8 @@
 				<td>
 				    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Course_Channeltunnel_en.svg/1200px-Course_Channeltunnel_en.svg.png" style="width:150px;height:123px;"class="right" />
 		            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/West_Coast_Main_Line_Map.png/1024px-West_Coast_Main_Line_Map.png" style="width:117px;height:160px;"class="right" />
+</table>
+
 <table>
     <tr>
 	    <td>
